--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-globe.gl": "^2.34.0",
+    "satellite.js": "^6.0.1",
+    "tle": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
