--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.8.0",
+    "@types/mui-image": "^1.0.5",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.6",
+    "mui-image": "^1.0.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.34.0",
