completed api2 tests, completed integration tests, modified load launches with boolean to specify dev or production endpoint

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.8.0",
+    "@types/deep-equal": "^1.0.4",
+    "@types/lodash": "^4.17.20",
     "@types/mui-image": "^1.0.5",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
+    "deep-equal": "^2.2.3",
     "framer-motion": "^12.23.6",
-    "mui-image": "^1.0.9",
-    "framer-motion": "^12.23.6",
+    "lodash": "^4.17.21",
     "mui-image": "^1.0.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
