--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "vite build",
-    "deploy": "gh-pages -d dist -b prod-build -r https://x-access-token:${GH_TOKEN}@github.com/CMPT-276-SUMMER-2025/final-project-11-stars.git"
+    "deploy": "gh-pages -d dist -b prod-build"
 
   },
   "dependencies": {
