--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,13 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Configure Git identity
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
       - name: Install gh-pages globally
         run: npm install -g gh-pages
         
       - name: Deploy to GitHub Pages
-        env:
-         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run deploy
+        run: |
+         git config --global user.email "bidisharoybrn@gmail.com"
+         git config --global user.name "bidishaaroy"
+         npx gh-pages -d dist -b prod-build -r https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/CMPT-276-SUMMER-2025/final-project-11-stars.git
 
 
