--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,20 +3,15 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - cicd
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+      - cicd  
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -29,9 +24,11 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: prod-build  
+      - name: Configure Git user
+        run: |
+          git config user.name "your-name-here"
+          git config user.email "your-email@example.com"
+
+      - name: Deploy using gh-pages and PAT
+        run: |
+          npx gh-pages -d dist -b prod-build -r https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/<your-username>/<your-repo>.git
