--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
 
       - name: Deploy using gh-pages and PAT
         run: |
-          npx gh-pages -d dist -b prod-build -r https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/CMPT-276-SUMMER-2025/final-project-11-stars.git
+          npx gh-pages -d dist -b prod-build -r https://x-access-token:${{ secrets.PERSONAL_TOKEN }}@github.com/CMPT-276-SUMMER-2025/final-project-11-stars.git
 
