--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "npm run test:js && npm run test:ts",
+    "test:js": "node src/model/tests/api1-tests/events_tests.js && node src/model/tests/api1-tests/launches_tests.js",
+    "test:ts": "ts-node src/model/tests/api1-tests/events_tests.ts && ts-node src/model/tests/api1-tests/launches_tests.ts && ts-node src/model/tests/api2-tests/satellites_tests.ts && ts-node src/model/tests/integration_tests.ts",
     "predeploy": "vite build",
     "deploy": "gh-pages -d dist -b prod-build"
 
