--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "jest": "^29.0.0",
+   "ts-jest": "^29.0.0",
+   "@types/jest": "^29.0.0"
   }
 }
