--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
-    "test:js": "node src/model/tests/api1-tests/events_tests.js && node src/model/tests/api1-tests/launches_tests.js",
-    "test:ts": "ts-node src/model/tests/api1-tests/events_tests.ts && ts-node src/model/tests/api1-tests/launches_tests.ts && ts-node src/model/tests/api2-tests/satellites_tests.ts && ts-node src/model/tests/integration_tests.ts",
     "predeploy": "vite build",
     "deploy": "gh-pages -d dist -b prod-build"
 
@@ -51,5 +49,11 @@
     "jest": "^29.0.0",
    "ts-jest": "^29.0.0",
    "@types/jest": "^29.0.0"
-  }
+  },
+    "jest": {
+    "testMatch": [
+      "**/src/model/tests/**/*.js",
+      "**/src/model/tests/**/*.ts"
+    ]
+  },
 }
