--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,11 +1,12 @@
 {
-  "extends": "./tsconfig.app.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "target": "ES2022",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "noEmit": true
+    "allowSyntheticDefaultImports": true,
+    "verbatimModuleSyntax": false
   },
   "include": ["src"]
 }
