--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -6,7 +6,7 @@
     "moduleResolution": "bundler",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "allowImportingTsExtensions": false,
+    "allowImportingTsExtensions": true,
 
     "verbatimModuleSyntax": false
   },
